# datasets

./: .gitignore  .pylintrc  MANIFEST.in  Makefile  README.md  load_all.py  pyproject.toml  pytest.ini  requirement.txt  requirements.txt  setup.py
.github/workflows/: pypi-publish.yaml
datasets/: config.py
datasets/aslg_pc12/: __init__.py  aslg_pc12_test.py  checksums.tsv
datasets/autsl/: __init__.py  autsl.py  checksums.tsv  pose.header
datasets/autsl/dummy_data/: labels.csv
datasets/rwth_phoenix2014_t/: rwth_phoenix2014_t.py
datasets/wlasl/: __init__.py  wlasl_test.py
examples/: load.ipynb  load_all.py  run-holistic.py
examples/datasets/: data_check.py  dgs_types.py  sign2mint.py  signsuisse.py
sign_language_datasets/datasets/: __init__.py  config.py  warning.py
sign_language_datasets/datasets/asl_citizen/: __init__.py  asl_citizen.py  holistic.poseheader
sign_language_datasets/datasets/asl_lex/: __init__.py  asl_lex.py  asl_lex_test.py  data-key.csv
sign_language_datasets/datasets/asl_signs/: __init__.py  asl_signs.py  asl_signs_test.py
sign_language_datasets/datasets/aslg_pc12/: aslg_pc12.py  aslg_pc12_test.py
sign_language_datasets/datasets/autsl/: autsl.py  autsl_test.py  checksums.tsv  openpose_135.poseheader
sign_language_datasets/datasets/bobsl/: __init__.py  bobsl.py  bobsl_test.py  checksums.tsv  create_index.py
sign_language_datasets/datasets/bobsl_islr/: __init__.py  bobsl_islr.py
sign_language_datasets/utils/: get_pose_header.py  torch_dataset.py
utils/features/: pose_feature.py
(+120 files in other folders)
